# cdk8s

./: .bazelrc  .bazelrc-ci  .deepsource.toml  .eslintrc.js  .eslintrc.json  .gitattributes  .gitignore  .gitpod.Dockerfile  .mergify.yml  .npmignore  .projenrc.js  .projenrc.ts  .versionrc.json  ADOPTERS.md  BUILD.bazel  CHANGELOG.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  OWNERS.md  README.md  ROADMAP.md  SECURITY.md  WORKSPACE  generate.sh  index.html  index.xml  jest.config.js  kubernetes-upgrade-automation.ts  lerna.json  mkdocs.yml  package-lock.json  package.json  packages.bzl  projen.sh  sitemap.xml  snapshotResolver.js  tsconfig.dev.json  tsconfig.json  tslint.json  (+1 more)
.circleci/: config.yml
.devcontainer/: Dockerfile  devcontainer.json
.github/: .bazelrc  PULL_REQUEST_TEMPLATE.md  dependabot.yml  semantic.yml
.github/ISSUE_TEMPLATE/: bug.md  bug_report.md  config.yml  feature-request---suggestion.md  feature-request.md  rfc.md
.github/workflows/: auto-approve.yml  auto-queue.yml  build.yml  bump-latest-cdk8s-plus-library.yml  codeql.yml  dependabot-security-alerts.yml  dependencies.yml  homebrew.yml  import-k8s-schemas.yml  integ.yml  k8s-upgrade-automation.yml  pull-request-lint.yml  release-next.yml  release.yml  security.yml  stale.yml  triage.yml  upgrade-compiler-dependencies.yml  upgrade-configuration.yml  upgrade-dependencies.yml  upgrade-dev-dependencies.yml  upgrade-projen.yml  upgrade-runtime-dependencies.yml  upgrade.yml  website-build.yml  website.yml
.projen/: deps.json  files.json  tasks.json
.projenrc/: .projenrc.ts  cdk8s-cli.ts  cdk8s-plus-17.ts  cdk8s.ts  tsconfig.json
automate-k8s-release/: kubernetes-upgrade-automation.ts  replace-old-version-references.ts  update-cdk8s-version.ts
css/: style.min.11c62925fdb13699ada9387b2312ed8aa64d54089155d49591c77445bd29f254.css  style.min.4203fa22b8ec226bc93e9c4e7369d8836958241ce9e611a79b4bc3a33321e4e1.css
docs/: .gitignore  .pages  README.md  build.sh  ecosystem-interoperability.md  getting-started.md  index.html  index.md  intro-python.md  intro-typescript.md  media.md  migrating-from-1.x.md  requirements.txt  support.md
docs/assets/: extra.css
docs/basics/: .pages  api-object.md  app.md  deps.md  escape-hatches.md  helm.md  include.md  index.md  testing.md
docs/cli/: .pages  import.md  index.md  init.md  installation.md  synth.md
docs/concepts/: .pages  api-object.md  chart.md  constructs.md  deps.md  escape-hatches.md  helm.md  include.md  index.md
docs/examples/: .pages  00-hello.md  10-web-service.md  20-crd.md  30-podinfo.md  40-plus-elasticsearch.md  50-plus-ingress.md  crd.md  hello.md  index.md  plus-elasticsearch.md  plus-ingress.md  podinfo.md  web-service.md
docs/get-started/: .pages  go.md  index.md  java.md  python.md  typescript.md
docs/getting-started/: java.md  python.md  typescript.md
docs/latest/: 404.html  CHANGELOG.html  CONTRIBUTING.html  ROADMAP.html  build.sh  ecosystem-interoperability.html  getting-started.html  index.html  media.html  migrating-from-1.x.html  sitemap.xml  support.html
docs/plus/: .pages  config-map.md  container.md  cronjob.md  deployment.md  horizontal-pod-autoscaler.md  index.md  ingress.md  job.md  namespace.md  network-policy.md  pod.md  pv.md  pvc.md  rbac.md  secret.md  service-account.md  service.md  volume.md
examples/: .gitignore  README.md  apply.sh  package-lock.json  package.json
examples/hello/: .gitignore  BUILD.bazel  README.md  apply.sh  hello-k8s.ts  hello.test.ts  hello.ts  index.ts  jest.config.js  package.json  snapshotResolver.js  tsconfig.json
examples/hello/__snapshots__/: hello.test.js.snap
examples/hello/imports/: k8s.ts
examples/hello/test/: index.test.ts
examples/podinfo/: BUILD.bazel  README.md  autoscaler.ts  ingress.ts  package.json  service.ts
examples/podinfo/examples/: app-example.ts  podinfo.ts
examples/podinfo/imports/: k8s.ts
examples/podinfo/lib/: autoscaler.ts  container.ts  deployment.ts  index.ts  ingress.ts  service.ts
examples/web-service/: .gitignore  BUILD.bazel  index.ts  jest.config.js  package.json  web-service.ts
examples/web-service/imports/: k8s.ts
getting-started/: index.html  index.xml
git-hooks/: README.md  prepare-commit-msg  setup.sh
k8s-upgrade-automation/: kubernetes-upgrade-automation.ts
lib/: api-object.ts  chart.ts  deployment.ts  horizontal-pod-autoscaler.ts  index.ts  ingress.ts  resource.ts  service.ts  stack.ts  util.ts
patches/: jest-haste-map+25.1.0.patch  rules_nodejs.patch
projen/: dependencies.d.ts  dependencies.js  dependencies.ts  yarn-mono-repo.d.ts  yarn-mono-repo.js  yarn-mono-repo.ts
projen-contrib/: dependencies.ts  index.ts  tsconfig.json  yarn-mono-repo.ts
projenrc/: tsconfig.json
research/: README.md
rfc/: 0000-template.md  1216-resolve-cloud-tokens.md  1251-helm-synthesis.md  1272-helm-import.md  NNNN-helm-migration.md  helm-import.md  helm-migration.md  helm-synthesis.md  manifest-validation.md  no-code-synthesis.md  sandbox-submission.md
src/: container.ts  index.ts  java.ts  k8s-automation.ts  pod.ts  replace-old-version-references.ts  rotate-cdk8s-plus.ts  setLabelsScript.sh  setTestingModeVar.sh  stateful-set.ts  testModeScript.sh  testModeSet.sh  testingModeScript.sh  transforms.ts
test/: README.md  common.sh  extract-dist.sh  hello.test.ts  java.test.ts  resource.test.ts  run-against-dist.sh  stack.test.ts  test-all.sh  tsconfig.json  util.ts
tools/: BUILD.bazel  align-version.js  align-version.sh  bazel-buildifier.sh  bump-prerelease.sh  bump.sh  cdk8s.bzl  clean-full-build.sh  collect-dist.sh  copier.bzl  copy-with-replace.js  defaults.bzl  external.bzl  generate-bazelrc.sh  get-version-marker.js  import-spec.sh  install-workflow-deps.sh  jest.bzl  jsii_library.bzl  jsii_package.bzl  link-all.sh  pack.sh  packager.js  publish.sh  release-github.sh  release-homebrew.sh  release-npm.sh  release.sh
tools/jsii/: external.bzl  jsii_library.bzl
tools/jsii/jsii-wrapped/: BUILD.bazel  index.ts
tools/package-json/: package.json  package_json.bzl
website/: .gitignore  README.md  build.sh  config.yaml
(+4693 files in other folders)
