package(default_visibility = ["//visibility:public"])

load("//tools:cdk8s.bzl", "cdk8s_import", "cdk8s_synth")
load("//tools:defaults.bzl", "jest_test", "ts_library")

cdk8s_import(
    name = "gen",
    language = "typescript",
    path = "examples/web-service/imports",
)

cdk8s_synth(
    name = "synth",
    app = "TODO",
    data = [":lib"],
    path = "dist",
)

ts_library(
    name = "lib",
    module_name = "web-service",
    srcs = glob(
        ["**/*.ts"],
        exclude = ["**/*.test.ts"],
    ),
    deps = [
        "//packages/cdk8s:lib",
        "@npm//@aws-cdk/core",
    ],
)

ts_library(
    name = "tests",
    testonly = True,
    srcs = glob(["**/*.test.ts"]),
    deps = [
        ":lib",
    ],
)

jest_test(
    name = "test",
    srcs = glob(["**/*.snap"]),
    lib = ":tests",
    tags = ["manual"],
    deps = [
    ],
)
