load("@build_bazel_rules_nodejs//:index.bzl", "nodejs_binary")
load("@npm_bazel_typescript//:index.bzl", "ts_library")

ts_library(
    name = "jsii_lib",
    srcs = ["index.ts"],
    module_name = "@jsii/bazel",
    node_modules = "@npm//typescript:typescript__typings",
    tsconfig = ":tsconfig.json",
    deps = [
        "@npm//@bazel/typescript",
        "@npm//@types/node",
        "@npm//typescript",
    ],
)

nodejs_binary(
    name = "jsii-wrapped",
    data = [
        ":jsii_lib",
        "//packages/bazel/third_party/github.com/bazelbuild/bazel/src/main/protobuf:worker_protocol.proto",
        "@npm//source-map-support",
        "@npm//tslib",
    ],
    entry_point = ":index.ts",
    visibility = ["//visibility:public"],
)

filegroup(
    name = "package_assets",
    srcs = ["BUILD.bazel"],
    visibility = ["//packages/bazel:__subpackages__"],
)
